src/css/custom.css
/* ... */
.f-s-20 {
  font-size: 20px;
}

.f-s-25 {
  font-size: 25px;
}

.f-s-30 {
  font-size: 30px;
}

.f-s-35 {
  font-size: 35px;
}

.f-s-40 {
  font-size: 40px;
}

.f-c-g {
  color: #999;
}

.f-s-b {
  font-weight: bold !important;
}

.f-s-n-b {
  font-weight: normal !important;
}

.p-a-0 {
  padding: 0px !important;
}

.p-a-2 {
  padding: 2px !important;
}

.p-a-5 {
  padding: 5px !important;
}

.p-a-10 {
  padding: 10px !important;
}

.p-a-11 {
  padding: 11px !important;
}

.p-a-50 {
  padding: 50px !important;
}

.p-t-0 {
  padding-top: 0px;
}

.p-t-1 {
  padding-top: 1px;
}

.p-t-2 {
  padding-top: 2px;
}

.p-t-3 {
  padding-top: 3px;
}

.p-t-5 {
  padding-top: 5px;
}

.p-t-7 {
  padding-top: 7px!important;
}

.p-t-8 {
  padding-top: 8px;
}

.p-t-9 {
  padding-top: 9px;
}

.p-t-10 {
  padding-top: 10px;
}

.p-t-12 {
  padding-top: 12px;
}

.p-t-14 {
  padding-top: 14px!important;
}

.p-t-20 {
  padding-top: 20px;
}

.p-t-25 {
  padding-top: 25px;
}

.p-t-30 {
  padding-top: 30px;
}

.p-t-50 {
  padding-top: 50px;
}

.p-t-80 {
  padding-top: 80px;
}

.p-b-0 {
  padding-bottom: 0px !important;
}

.p-b-5 {
  padding-bottom: 5px;
}

.p-b-10 {
  padding-bottom: 10px !important;
}

.p-b-20 {
  padding-bottom: 20px;
}

.p-b-25 {
  padding-bottom: 25px;
}

.p-b-27 {
  padding-bottom: 27px;
}

.p-b-40 {
  padding-bottom: 40px;
}

.p-b-60 {
  padding-bottom: 60px;
}

.p-b-65 {
  padding-bottom: 65px;
}

.p-b--3 {
  padding-bottom: -3px !important;
}

.p-l-0 {
  padding-left: 0px !important;
}

.p-l--5 {
  padding-left: -5px !important;
}

.p-l-2 {
  padding-left: 2px !important;
}

.p-l-5 {
  padding-left: 5px !important;
}

.p-l-10 {
  padding-left: 10px !important;
}

.p-l-20 {
  padding-left: 20px !important;
}

.p-l-30 {
  padding-left: 30px !important;
}

.p-l-r-10 {
  padding-left: 10px !important;
  padding-right: 10px !important;
}

.p-l-r-25 {
  padding-left: 25px !important;
  padding-right: 25px !important;
}

.p-l-r-38 {
  padding-left: 38px !important;
  padding-right: 38px !important;
}

.p-l-r-50 {
  padding-left: 50px !important;
  padding-right: 50px !important;
}

.p-l-r-100 {
  padding-left: 100px !important;
  padding-right: 100px !important;
}

.p-t-b-3 {
  padding-top: 3px !important;
  padding-bottom: 3px !important;
}

.p-t-b-50 {
  padding-top: 50px !important;
  padding-bottom: 50px !important;
}

.p-t-b-5 {
  padding: 5px 0px 5px 0px;
}

.p-t-b-20 {
  padding: 20px 0px 20px 0px;
}

.p-a-20 {
  padding: 20px !important;
}

.p-r-0 {
  padding-right: 0px !important;
}

.p-r-2 {
  padding-right: 2px;
}

.p-r-15 {
  padding-right: 15px;
}

.p-r-30 {
  padding-right: 30px !important;
}

.m-a-5 {
  margin: 5px;
}

.p-a-0 {
  padding: 0px !important;
}

.m-a-10 {
  margin: 10px;
}

.m-a-20 {
  margin: 20px;
}

.m-t-1 {
  margin-top: 1px;
}

.m-t-3 {
  margin-top: 3px;
}

.m-t-5 {
  margin-top: 5px;
}

.m-t-6 {
  margin-top: 6px;
}

.m-t-7 {
  margin-top: 7px;
}

.m-t-8 {
  margin-top: 8px !important;
}

.m-t-10 {
  margin-top: 10px !important;
}

.m-t-13 {
  margin-top: 13px;
}

.m-t-15 {
  margin-top: 15px;
}

.m-t-20 {
  margin-top: 20px !important;
}

.m-t-22 {
  margin-top: 22px;
}

.m-t-19 {
  margin-top: 19px;
}

.m-t-25 {
  margin-top: 25px;
}

.m-t-36 {
  margin-top: 36px;
}

.m-t-41 {
  margin-top: 41px;
}

.m-t-60 {
  margin-top: 60px;
}

.m-t-70 {
  margin-top: 70px;
}

.m-t-100 {
  margin-top: 100px;
}

.m-t-110 {
  margin-top: 110px;
}

.m-t-158 {
  margin-top: 158px;
}

.m-t-5 {
  margin-top: 5px;
}

.m-t-30 {
  margin-top: 30px;
}

.m-t-35 {
  margin-top: 35px;
}

.m-t--1 {
  margin-top: -1px;
}

.m-t--2 {
  margin-top: -2px;
}

.m-t--3 {
  margin-top: -3px;
}

.m-t--5 {
  margin-top: -5px;
}

.m-t--10 {
  margin-top: -10px;
}

.m-t--15 {
  margin-top: -15px;
}

.m-t--18 {
  margin-top: -18px;
}

.m-t--20 {
  margin-top: -20px;
}

.m-t--25 {
  margin-top: -25px;
}

.m-t--30 {
  margin-top: -30px;
}

.m-t--33 {
  margin-top: -33px;
}

.m-t--37 {
  margin-top: -37px;
}

.m-t--40 {
  margin-top: -40px;
}

.m-t--45 {
  margin-top: -45px;
}

.m-t--54 {
  margin-top: -54px;
}

.m-t--60 {
  margin-top: -60px;
}

.m-t--64 {
  margin-top: -64px;
}

.m-t-40 {
  margin-top: 40px;
}


.m-t-38 {
  margin-top: 38px;
}

.m-t-50 {
  margin-top: 50px;
}

.m-t-60 {
  margin-top: 60px;
}

.m-t-80 {
  margin-top: 80px;
}

.m-l-8 {
  margin-left: 8px;
}

.m-l-2 {
  margin-left: 2px;
}

.m-l-10 {
  margin-left: 10px;
}

.m-l-15 {
  margin-left: 15px;
}

.m-l-20 {
  margin-left: 20px !important;
}

.m-l-25 {
  margin-left: 25px !important;
}

.m-l-30 {
  margin-left: 30px !important;
}

.m-l-40 {
  margin-left: 40px !important;
}

.m-l-50 {
  margin-left: 50px !important;
}

.m-l--5 {
  margin-left: -5px !important;
}

.m-b-0 {
  margin-bottom: 0px !important;
}

.m-b-3 {
  margin-bottom: 3px !important;
}

.m-b-4 {
  margin-bottom: 4px !important;
}

.m-b-5 {
  margin-bottom: 5px !important;
}

.m-b-6 {
  margin-bottom: 6px !important;
}

.m-b-7 {
  margin-bottom: 7px !important;
}

.m-b-8 {
  margin-bottom: 8px !important;
}

.m-b-10 {
  margin-bottom: 10px !important;
}

.m-b-15 {
  margin-bottom: 15px !important;
}

.m-b-18 {
  margin-bottom: 18px !important;
}

.m-b-20 {
  margin-bottom: 20px !important;
}

.m-b-30 {
  margin-bottom: 30px !important;
}

.m-b--3 {
  margin-bottom: -3px !important;
}

.m-b--20 {
  margin-bottom: -20px;
}

.m-r-5 {
  margin-right: 5px;
}

.m-r-10 {
  margin-right: 10px!important;
}

.m-r-15 {
  margin-right: 15px;
}

.m-r-25 {
  margin-right: 25px;
}

.m-r-20 {
  margin-right: 20px;
}

.m-r-50 {
  margin-right: 50px;
}

.max-h-100 {
  min-height: 100px;
}

.max-h-410 {
  min-height: 410px !important;
}

.b-b-n {
  border-bottom: none !important;
}

.b-l-r-n {
  border-left: none !important;
  border-right: none !important;
}

.bg-gray {
  background: #999;
}

.p-l-5 {
  padding-left: 5px;
}

.cursorPointer {
  cursor: pointer;
}

.boxShadow {
  box-shadow: 0 0 5px #999;
}
/* ... */

